--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,5 +1,9 @@
 <p style="color: green"><%= notice %></p>
 
+<p>
+<%= button_to("Log Out", destroy_user_session_path, method: :delete ) %>
+</p>
+
 <h1>Authors</h1>
 
 <%= link_to "New author", new_author_path %>
