--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,9 @@
 <p style="color: green"><%= notice %></p>
 
+<p>
+<%= button_to("Log Out", destroy_user_session_path, method: :delete ) %>
+</p>
+
 <h1>Books</h1>
 
 <%= link_to "New book", new_book_path %>
@@ -17,6 +21,6 @@
       <%= render book %>
     <% end %>
   </table>
-  
+
   <%= paginate @books %>
 </div>
