--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,9 @@
 <p style="color: green"><%= notice %></p>
 
+<p>
+<%= button_to("Log Out", destroy_user_session_path, method: :delete ) %>
+</p>
+
 <h1>Users</h1>
 
 <%= link_to "New user", new_user_path %>
