Initial style for index view

--- a/app/views/authors/_author.html.erb
+++ b/app/views/authors/_author.html.erb
@@ -1,4 +1,6 @@
-<tr id="<%= dom_id author %>">
+<tr>
   <td><%= author.name %></td>
-  <td><%= link_to "Show this author", author %></td>
+  <td><%= author.created_at %></td>
+  <td><%= author.updated_at %></td>
+  <td><%= link_to "Show", author %></td>
 </tr>
