--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,23 +1,23 @@
-<p style="color: green"><%= notice %></p>
+<h2>Authors</h2>
 
 <p>
-<%= button_to("Log Out", destroy_user_session_path, method: :delete ) %>
+  <%= link_to "New author", new_author_path %>
 </p>
 
-<h1>Authors</h1>
-
-<%= link_to "New author", new_author_path %>
-
-<div id="authors">
-  <table>
+<table class="table table-striped table-sm">
+  <thead>
     <tr>
       <th>Name</th>
+      <th>Created At</th>
+      <th>Updated At</th>
       <th>Action</th>
     </tr>
+  </thead>
+  <tbody>
     <% @authors.each do |author| %>
       <%= render author %>
     <% end %>
-  </table>
+  </tbody>
+</table>
 
-  <%= paginate @authors %>
-</div>
+<%= paginate @authors %>
