--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,25 +1,25 @@
-<p style="color: green"><%= notice %></p>
+<h2>Books</h2>
 
-<p>
-<%= button_to("Log Out", destroy_user_session_path, method: :delete ) %>
-</p>
-
-<h1>Books</h1>
-
-<%= link_to "New book", new_book_path %>
+<p><%= link_to "New book", new_book_path %></p>
 
 <div id="books">
-  <table>
-    <tr>
-      <th>Title</th>
-      <th>Publisher</th>
-      <th>Publication Year</th>
-      <th>Author</th>
-      <th>Action</th>
-    </tr>
-    <% @books.each do |book| %>
-      <%= render book %>
-    <% end %>
+  <table class="table table-striped table-sm">
+    <thead>
+      <tr>
+        <th scope="col">Title</th>
+        <th scope="col">Publisher</th>
+        <th scope="col">Publication Year</th>
+        <th scope="col">Author</th>
+        <th scope="col">Created At</th>
+        <th scope="col">Created Updated At</th>
+        <th scope="col">Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @books.each do |book| %>
+        <%= render book %>
+      <% end %>
+    </tbody>
   </table>
 
   <%= paginate @books %>
