--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,8 @@
-<tr id="<%= dom_id user %>">
+<tr>
   <td><%= user.first_name %></td>
   <td><%= user.last_name %></td>
   <td><%= user.email %></td>
-  <td><%= link_to "Show this user", user %>
+  <td><%= user.created_at %></td>
+  <td><%= user.updated_at %></td>
+  <td><%= link_to "Show", user %></td>
 </tr>
