--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,25 +1,24 @@
-<p style="color: green"><%= notice %></p>
+<h2>Users</h2>
 
-<p>
-<%= button_to("Log Out", destroy_user_session_path, method: :delete ) %>
-</p>
+<p><%= link_to "New user", new_user_path %></p>
 
-<h1>Users</h1>
-
-<%= link_to "New user", new_user_path %>
-
-<div id="users">
-  <table>
+<table class="table table-striped table-sm">
+  <thead>
     <tr>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Email</th>
-      <th>Action</th>
+      <th scope="col">First Name</th>
+      <th scope="col">Last Name</th>
+      <th scope="col">Email</th>
+      <th scope="col">Created At</th>
+      <th scope="col">Updated At</th>
+      <th scope="col">Action</th>
     </tr>
+  </thead>
+  <tbody>
     <% @users.each do |user| %>
       <%= render user %>
     <% end %>
-  </table>
+  </tbody>
+</table>
   
   <%= paginate @users %>
-</div>
+
