--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,8 +1,12 @@
 <h2>Authors</h2>
 
-<p>
-  <%= link_to "New author", new_author_path %>
-</p>
+<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+  <div class="btn-group me-2" role="group" aria-label="Second group">
+    <%= link_to "New Author", new_author_path, class: "btn btn-primary" %>
+  </div>
+</div>
+
+</br>
 
 <table class="table table-striped table-sm">
   <thead>
