--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,9 +1,12 @@
 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
   <div class="btn-group me-2" role="group" aria-label="Second group">
-    <%= link_to "Edit this author", edit_author_path(@author), class: "btn btn-warning" %>
+    <%= link_to "New Author", new_author_path, class: "btn btn-primary" %>
+  </div>
+  <div class="btn-group me-2" role="group" aria-label="Second group">
+    <%= link_to "Edit Author", edit_author_path(@author), class: "btn btn-warning" %>
   </div>
   <div class="btn-group" role="group" aria-label="Third group">
-    <%= button_to "Destroy this author", @author, method: :delete, class: "btn btn-danger" %>
+    <%= button_to "Destroy Author", @author, method: :delete, class: "btn btn-danger" %>
   </div>
 </div>
 
