--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,12 @@
 <h2>Users</h2>
 
-<p><%= link_to "New user", new_user_path %></p>
+<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+  <div class="btn-group me-2" role="group" aria-label="Second group">
+    <%= link_to "New User", new_user_path, class: "btn btn-primary" %>
+  </div>
+</div>
+
+</br>
 
 <table class="table table-striped table-sm">
   <thead>
