--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,12 @@
 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
   <div class="btn-group me-2" role="group" aria-label="Second group">
-    <%= link_to "Edit this User", edit_user_path(@user), class: "btn btn-warning" %>
+    <%= link_to "New User", new_user_path, class: "btn btn-primary" %>
+  </div>
+  <div class="btn-group me-2" role="group" aria-label="Second group">
+    <%= link_to "Edit User", edit_user_path(@user), class: "btn btn-warning" %>
   </div>
   <div class="btn-group" role="group" aria-label="Third group">
-    <%= button_to "Destroy this User", @user, method: :delete, class: "btn btn-danger" %>
+    <%= button_to "Destroy User", @user, method: :delete, class: "btn btn-danger" %>
   </div>
 </div>
 
