--- a/app/views/authors/_form.html.erb
+++ b/app/views/authors/_form.html.erb
@@ -1,22 +1,26 @@
-<%= form_with(model: author) do |form| %>
-  <% if author.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(author.errors.count, "error") %> prohibited this author from being saved:</h2>
+<div class="container">
+  <div class="row col-sm-4">
+    <%= form_with(model: author) do |form| %>
+      <% if author.errors.any? %>
+        <div style="color: red">
+          <h2><%= pluralize(author.errors.count, "error") %> prohibited this author from being saved:</h2>
 
-      <ul>
-        <% author.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+          <ul>
+            <% author.errors.each do |error| %>
+              <li><%= error.full_message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+      <div class="mb-3">
+        <label class="form-label">Name</label>
+        <%= form.text_field :name, class: "form-control", placeholder: 'Name'  %>
+      </div>
+
+      <div class="mb-3">
+        <%= form.submit %>
+      </div>
+    <% end %>
   </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
