--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,32 +1,36 @@
-<%= form_with(model: user) do |form| %>
-  <% if user.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+<div class="container">
+  <div class="row col-sm-4">
+    <%= form_with(model: user) do |form| %>
+      <% if user.errors.any? %>
+        <div style="color: red">
+          <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
-      <ul>
-        <% user.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+          <ul>
+            <% user.errors.each do |error| %>
+              <li><%= error.full_message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
 
-  <div>
-    <%= form.label :first_name, style: "display: block" %>
-    <%= form.text_field :first_name %>
+      <div class="mb-3">
+        <label class="form-label">First Name</label>
+        <%= form.text_field :first_name, class: "form-control", placeholder: 'First Name'  %>
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label">Last Name</label>
+        <%= form.text_field :last_name, class: "form-control", placeholder: 'Last Name'  %>
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label">Email</label>
+        <%= form.email_field :email, class: "form-control", placeholder: 'Email'  %>
+      </div>
+
+      <div class="mb-3">
+        <%= form.submit %>
+      </div>
+    <% end %>
   </div>
-
-  <div>
-    <%= form.label :last_name, style: "display: block" %>
-    <%= form.text_field :last_name %>
-  </div>
-
-  <div>
-    <%= form.label :email, style: "display: block" %>
-    <%= form.text_field :email %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
