--- a/app/views/authors/_form.html.erb
+++ b/app/views/authors/_form.html.erb
@@ -2,9 +2,8 @@
   <div class="row col-sm-4">
     <%= form_with(model: author) do |form| %>
       <% if author.errors.any? %>
-        <div style="color: red">
-          <h2><%= pluralize(author.errors.count, "error") %> prohibited this author from being saved:</h2>
-
+        <div class="alert alert-danger" role="alert">
+          <%= pluralize(author.errors.count, "error") %> prohibited this author from being saved:
           <ul>
             <% author.errors.each do |error| %>
               <li><%= error.full_message %></li>
