--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -2,9 +2,8 @@
   <div class="row col-sm-4">
     <%= form_with(model: book) do |form| %>
       <% if book.errors.any? %>
-        <div style="color: red">
-          <h2><%= pluralize(book.errors.count, "error") %> prohibited this book from being saved:</h2>
-
+        <div class="alert alert-danger" role="alert">
+          <%= pluralize(book.errors.count, "error") %> prohibited this Book from being saved:
           <ul>
             <% book.errors.each do |error| %>
               <li><%= error.full_message %></li>
