--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,8 +2,8 @@
   <div class="row col-sm-4">
     <%= form_with(model: user) do |form| %>
       <% if user.errors.any? %>
-        <div style="color: red">
-          <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+        <div class="alert alert-danger" role="alert">
+          <%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:
 
           <ul>
             <% user.errors.each do |error| %>
